jsc/bindings/bua_jsc_sys.rs

// jsc/bindings/bua_jsc_sys.rs
//
// Raw unsafe bindings to the C JSC bridge.
//
// RULES:
//   1. This file contains ALL unsafe. Nothing else in bua-runtime uses unsafe.
//   2. Every extern function is wrapped in a safe abstraction in ffi/context.rs
//   3. Pointer validity is maintained by the wrapper layer, not here.
//   4. This file is only compiled when cfg(jsc_available) is set.
//
// Generated by hand (bindgen output cleaned and annotated).
// When JSC headers change: run `cargo build` which regenerates via build.rs.

#![allow(
    non_camel_case_types,
    non_snake_case,
    dead_code,
    clippy::missing_safety_doc
)]

use std::ffi::c_void;
use std::os::raw::{c_char, c_int};

// ---------------------------------------------------------------------------
// Opaque JSC types
// ---------------------------------------------------------------------------

/// JSC virtual machine group. One per process is typical.
#[repr(C)]
pub struct OpaqueJSContextGroup(c_void);
pub type JSContextGroupRef = *mut OpaqueJSContextGroup;

/// A JSC global execution context (one per agent).
#[repr(C)]
pub struct OpaqueJSContext(c_void);
pub type JSContextRef = *const OpaqueJSContext;
pub type JSGlobalContextRef = *mut OpaqueJSContext;

/// A JS string (ref-counted, UTF-16 internally).
#[repr(C)]
pub struct OpaqueJSString(c_void);
pub type JSStringRef = *mut OpaqueJSString;

/// A JS value (any type).
#[repr(C)]
pub struct OpaqueJSValue(c_void);
pub type JSValueRef = *const OpaqueJSValue;

/// A JS object (subtype of JSValue).
pub type JSObjectRef = *mut OpaqueJSValue;

/// A JS class (used for native object registration).
#[repr(C)]
pub struct OpaqueJSClass(c_void);
pub type JSClassRef = *mut OpaqueJSClass;

// ---------------------------------------------------------------------------
// JSC value types
// ---------------------------------------------------------------------------

pub const K_JSTYPE_UNDEFINED: c_int = 0;
pub const K_JSTYPE_NULL: c_int = 1;
pub const K_JSTYPE_BOOLEAN: c_int = 2;
pub const K_JSTYPE_NUMBER: c_int = 3;
pub const K_JSTYPE_STRING: c_int = 4;
pub const K_JSTYPE_OBJECT: c_int = 5;
pub const K_JSTYPE_SYMBOL: c_int = 6;

// ---------------------------------------------------------------------------
// JSC property attributes
// ---------------------------------------------------------------------------

pub const K_JSPROPERTY_ATTRIBUTE_NONE: c_int = 0;
pub const K_JSPROPERTY_ATTRIBUTE_READ_ONLY: c_int = 2;
pub const K_JSPROPERTY_ATTRIBUTE_DONT_ENUM: c_int = 4;
pub const K_JSPROPERTY_ATTRIBUTE_DONT_DELETE: c_int = 8;

// ---------------------------------------------------------------------------
// Native callback type
// ---------------------------------------------------------------------------

pub type JSObjectCallAsFunctionCallback = unsafe extern "C" fn(
    ctx: JSContextRef,
    function: JSObjectRef,
    thisObject: JSObjectRef,
    argumentCount: usize,
    arguments: *const JSValueRef,
    exception: *mut JSValueRef,
) -> JSValueRef;

// ---------------------------------------------------------------------------
// JSClassDefinition (simplified — full struct is larger)
// ---------------------------------------------------------------------------

#[repr(C)]
pub struct JSClassDefinition {
    pub version: c_int,
    pub attributes: c_int,
    pub class_name: *const c_char,
    pub parent_class: JSClassRef,
    // ... many function pointers omitted for brevity
    // Real: matches <JavaScriptCore/JSObjectRef.h> JSClassDefinition exactly
    pub call_as_function: Option<JSObjectCallAsFunctionCallback>,
    pub finalize: Option<unsafe extern "C" fn(JSObjectRef)>,
    _padding: [*const c_void; 12], // match struct size
}

impl JSClassDefinition {
    pub const fn empty() -> Self {
        Self {
            version: 0,
            attributes: 0,
            class_name: std::ptr::null(),
            parent_class: std::ptr::null_mut(),
            call_as_function: None,
            finalize: None,
            _padding: [std::ptr::null(); 12],
        }
    }
}

// ---------------------------------------------------------------------------
// Bua C bridge functions (from jsc/src/bua_jsc.cpp)
// ---------------------------------------------------------------------------

extern "C" {
    // --- Context ---
    pub fn bua_context_create(max_heap_bytes: usize) -> *mut c_void;
    pub fn bua_context_destroy(ctx: *mut c_void);
    pub fn bua_context_drain_microtasks(ctx: *mut c_void);

    // --- Evaluation ---
    pub fn bua_eval(
        ctx: *mut c_void,
        source: *const c_char,
        source_len: usize,
        source_url: *const c_char,
        out_exception: *mut *mut c_void,
    ) -> *mut c_void; // BuaValue*

    pub fn bua_eval_module(
        ctx: *mut c_void,
        source: *const c_char,
        source_len: usize,
        module_url: *const c_char,
        out_exception: *mut *mut c_void,
    ) -> *mut c_void;

    // --- Value constructors ---
    pub fn bua_value_undefined(ctx: *mut c_void) -> *mut c_void;
    pub fn bua_value_null(ctx: *mut c_void) -> *mut c_void;
    pub fn bua_value_bool(ctx: *mut c_void, v: bool) -> *mut c_void;
    pub fn bua_value_number(ctx: *mut c_void, v: f64) -> *mut c_void;
    pub fn bua_value_string(ctx: *mut c_void, utf8: *const c_char, len: usize) -> *mut c_void;
    pub fn bua_value_from_json(
        ctx: *mut c_void,
        json: *const c_char,
        len: usize,
        out_exception: *mut *mut c_void,
    ) -> *mut c_void;

    // --- Value accessors ---
    pub fn bua_value_type(ctx: *mut c_void, v: *const c_void) -> i32;
    pub fn bua_value_to_bool(ctx: *mut c_void, v: *const c_void) -> bool;
    pub fn bua_value_to_number(ctx: *mut c_void, v: *const c_void) -> f64;
    pub fn bua_value_to_string_utf8(
        ctx: *mut c_void,
        v: *const c_void,
        out_len: *mut usize,
    ) -> *mut c_char;
    pub fn bua_value_to_json(
        ctx: *mut c_void,
        v: *const c_void,
        out_len: *mut usize,
    ) -> *mut c_char;
    pub fn bua_string_free(s: *mut c_char);
    pub fn bua_value_free(v: *mut c_void);
    pub fn bua_value_protect(ctx: *mut c_void, v: *mut c_void);
    pub fn bua_value_unprotect(ctx: *mut c_void, v: *mut c_void);

    // --- Native functions ---
    pub fn bua_set_native(
        ctx: *mut c_void,
        dotted_path: *const c_char,
        func: unsafe extern "C" fn(
            ctx: *mut c_void,
            this_val: *mut c_void,
            args: *mut *mut c_void,
            argc: usize,
            user_data: *mut c_void,
            out_exception: *mut *mut c_void,
        ) -> *mut c_void,
        user_data: *mut c_void,
    ) -> bool;

    // --- Snapshots ---
    pub fn bua_snapshot_create(ctx: *mut c_void, out_size: *mut usize) -> *mut u8;
    pub fn bua_snapshot_restore(ctx: *mut c_void, data: *const u8, size: usize) -> bool;
    pub fn bua_snapshot_free(data: *mut u8);

    // --- Exceptions ---
    pub fn bua_exception_message(ex: *const c_void) -> *const c_char;
    pub fn bua_exception_stack(ex: *const c_void) -> *const c_char;
    pub fn bua_exception_free(ex: *mut c_void);

    // --- Call/Promise ---
    pub fn bua_call_function(
        ctx: *mut c_void,
        func: *mut c_void,
        this_obj: *mut c_void,
        arg_count: usize,
        args: *const *mut c_void,
        out_exception: *mut *mut c_void,
    ) -> *mut c_void;

    pub fn bua_make_promise(
        ctx: *mut c_void,
        out_resolve: *mut *mut c_void,
        out_reject: *mut *mut c_void,
        out_exception: *mut *mut c_void,
    ) -> *mut c_void;
}

#[inline]
pub unsafe fn jsc_value_protect(ctx: *mut c_void, value: *const c_void) {
    bua_value_protect(ctx, value as *mut _);
}

#[inline]
pub unsafe fn jsc_value_unprotect(ctx: *mut c_void, value: *const c_void) {
    bua_value_unprotect(ctx, value as *mut _);
}

pub unsafe fn jsc_call_as_function(
    ctx: *mut c_void,
    func: *mut c_void,
    this_obj: *mut c_void,
    arg_count: usize,
    arguments: *const *const c_void,
    exception: *mut *mut c_void,
) -> *mut c_void {
    bua_call_function(
        ctx,
        func,
        this_obj,
        arg_count,
        arguments as *const *mut _,
        exception,
    )
}

pub unsafe fn jsc_make_deferred_promise(
    ctx: *mut c_void,
    resolve: *mut *mut c_void,
    reject: *mut *mut c_void,
    exception: *mut *mut c_void,
) -> *mut c_void {
    bua_make_promise(ctx, resolve, reject, exception)
}

// ---------------------------------------------------------------------------
// Safe string conversion helpers (the only non-trivial unsafe in this file)
// ---------------------------------------------------------------------------

/// Convert a Rust &str to a null-terminated CString, call f, return result.
/// Panics if the string contains interior nulls (JS strings shouldn't).
pub fn with_cstr<T>(s: &str, f: impl FnOnce(*const c_char) -> T) -> T {
    let cstr = std::ffi::CString::new(s).expect("string contains interior null");
    f(cstr.as_ptr())
}

/// Convert a C string returned by JSC (not null-terminated length-based) to String.
/// Frees the C string via bua_string_free after copying.
///
/// # Safety
/// - `ptr` must be a valid pointer returned by a bua_* function
/// - `len` must match the actual length
pub unsafe fn cstr_to_string(ptr: *mut c_char, len: usize) -> String {
    if ptr.is_null() || len == 0 {
        return String::new();
    }
    let slice = std::slice::from_raw_parts(ptr as *const u8, len);
    let s = String::from_utf8_lossy(slice).into_owned();
    bua_string_free(ptr);
    s
}

/// Read a null-terminated C string without taking ownership.
///
/// # Safety
/// - `ptr` must be valid and null-terminated
pub unsafe fn read_cstr(ptr: *const c_char) -> String {
    if ptr.is_null() {
        return String::new();
    }
    std::ffi::CStr::from_ptr(ptr).to_string_lossy().into_owned()
}
